# luna-model

./: .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  :wa  CONTRIBUTING.md  Cargo.toml  LICENSE  MaxCut.lp  MaxCut_out.lp  MaxCut_out_aq.lp  README.md  a.py  bar.py  build.rs  eval_test.py  foo.py  lp_file.lp  main.py  other.py  out.lp  pixi.toml  pyproject.toml  result (2).json  result.json  ruff.toml  rust-toolchain.toml  some.py  unnamed.lp  unnamed_out.lp  unnamed_out_aq.lp
aqm-macros/: Cargo.toml
aqm-macros/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  prelude.rs  traits.rs  utils.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: lib.rs  py.rs
crates/hashing/: Cargo.toml  README.md
crates/hashing/src/: constr.rs  env.rs  expr.rs  lib.rs  model.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: bounds.rs  constr.rs  constr_coll.rs  custom.rs  env.rs  expr.rs  lib.rs  model.rs  options.rs  sol.rs  specs.rs  timing.rs  transformation.rs  var.rs
crates/lunamodel/: Cargo.toml
crates/lunamodel-core/: Cargo.toml
crates/lunamodel-core/src/: lib.rs  prelude.rs  traits.rs
crates/lunamodel-python/: Cargo.toml
crates/lunamodel-python/src/: exceptions.rs  lib.rs
crates/lunamodel-tpass/: Cargo.toml  README.md
crates/lunamodel-tpass/src/: lib.rs
crates/lunamodel-types/: Cargo.toml  README.md
crates/lunamodel-types/src/: bound.rs  dtypes.rs  lib.rs  specs.rs  utils.rs  vtype.rs
crates/lunamodel-unwind/: Cargo.toml
crates/lunamodel/src/: lib.rs
crates/python/: Cargo.toml  README.md
crates/python/python_macros/: Cargo.toml
crates/python/src/: lib.rs  prelude.rs  unwind.rs  utilities.rs  utils.rs
crates/serializer/: Cargo.toml  README.md
crates/serializer/src/: compress.rs  encode.rs  lib.rs  prelude.rs  utils.rs  versionize.rs
crates/transform/: Cargo.toml  README.md
crates/transform/src/: cache.rs  error.rs  execution.rs  ir.rs  lib.rs  log.rs  pass_manager.rs  unicode.rs  utils.rs
crates/transformv2/: Cargo.toml
crates/transformv2/src/: ifelse.rs  lib.rs
crates/translate/: Cargo.toml  README.md
crates/translate/src/: lib.rs  source.rs  target.rs
crates/transpile/: CLEAN_SLATE.md  Cargo.toml  README.md  TRANSFORMATION_V2.md
crates/transpile/src/: analysis.rs  artifact.rs  context.rs  error.rs  manager.rs  pass.rs  record.rs  registry.rs
crates/transpiler/: Cargo.toml  README.md
crates/transpiler/src/: analysis.rs  artifact.rs  composite.rs  context.rs  control_flow.rs  error.rs  ir.rs  lib.rs  manager.rs  meta.rs  output.rs  pass.rs  pipeline.rs  record.rs  registry.rs  reversible.rs  step.rs  validation.rs
crates/transpiler/transpiler_macros/: Cargo.toml  README.md
crates/types/: Cargo.toml  README.md
crates/types/src/: bound.rs  cmp.rs  dtypes.rs  lib.rs  sense.rs  specs.rs  utils.rs  varid.rs  varname.rs  vtype.rs
crates/unwind/: Cargo.toml  README.md
crates/unwind/src/: lib.rs
crates/unwind/unwindable/: Cargo.toml  README.md
crates/unwind/unwinder/: Cargo.toml  README.md
crates/utils/: Cargo.toml  README.md
crates/utils/src/: cast.rs  cmp_tol.rs  defaults.rs  iterator.rs  lib.rs
js-lunamodel/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt  index.d.ts  index.js  napi.json  napi.wasm.json  package.json  wasm-package.json
js-lunamodel/examples/: solution_fixture.rs
js-lunamodel/src/: error.rs  lib.rs  resview.rs  solution.rs  timing.rs
js-lunamodel/tests/: binding.test.ts  deserialize.test.ts  fixtures.ts  loader.test.ts  solution.test.ts  solution_defaults.test.ts  solution_properties.test.ts  timing.test.ts  wasm_node_smoke.cjs
py-lunamodel/: .mypy.ini  README.md  THIRD_PARTY_LICENSES.txt  example_new_analysis.py  example_new_conditional.py  example_new_transformation.py  example_new_transformation_base.py  pyproject.toml  ruff.toml  something.py
py-lunamodel/_tests/: test_imports.py  test_quicksum.py
py-lunamodel/_tests/test_core/: data.py  test_internal_panic.py  test_specs.py  test_unexpected_char_lp.py
py-lunamodel/_tests/test_transformations/: test_binary_spin.py
py-lunamodel/examples/: binspin.py  branching.py  custom_analysis.py  custom_transformation.py  example_ifelse_conditional.py  example_new_analysis.py  example_new_analysis_decorator.py  example_new_conditional.py  example_new_conditional_decorator.py  example_new_transformation.py  example_new_transformation_base.py  example_new_transformation_decorator.py  existing_pass.py  transformation_decorator.py
py-lunamodel/final_tests/: test_quicksum.py
py-lunamodel/final_tests/test_core/: test_internal_panic.py  test_pickle_env.py
py-lunamodel/model-core/: Cargo.toml
py-lunamodel/pycore/: Cargo.toml
py-lunamodel/pycore/src/: lib.rs
py-lunamodel/pylm/: Cargo.toml
py-lunamodel/pylm/src/: lib.rs
py-lunamodel/src/lm/: __init__.py  _reexport.py  environment.py  expression.py  expression.pyi  variable.py
py-lunamodel/src/luna_model/: __init__.py  _deprecated.py  _typing.py  _utils.py  errors.py  errors.pyi  matrix.py  timer.py  ttarget.py  utils.py  wrapper.py
py-lunamodel/tests/: entry.py  test_imports.py  test_quicksum.py
py-lunamodel/tests/bounds/: test_bounds.py
py-lunamodel/tests/environment/: test_context.py
py-lunamodel/tests/expression/: test_eaccess.py  test_eadd.py  test_ecreation.py  test_eio.py  test_eiter.py  test_eops.py  test_separation.py  test_substitution.py
py-lunamodel/tests/extra/: entry.py  near_integral.py  test_infeasible.py  test_near_integral.py  test_np_assign.py
py-lunamodel/tests/test_bounds/: test_bounds.py
py-lunamodel/tests/test_core/: data.py  test_enums.py  test_pickle_env.py  test_specs.py  test_unexpected_char_lp.py  utils.py
py-lunamodel/tests/test_transformations/: test_binary_spin.py
pyo3-lunamodel/: Cargo.toml  README.md
pyo3-lunamodel/src/: bounds.rs  constraint.rs  constraint_collection.rs  environment.rs  expression.rs  lib.rs  macros.rs  model.rs  pass_ctx.rs  prelude.rs  sol.rs  types.rs  utils.rs  variable.rs
pyo3-lunamodel/src/types/: ctype.rs  (+8 more)
pyo3-lunamodel/tests/: README.md  pyproject.toml
(+1679 files in other folders)
