[workspace]
resolver = "3"
members = [
  "crates/*",
  "py-lunamodel/pylm",
  "pyo3-lunamodel",
  "crates/unwind/unwindable",
  "crates/unwind/unwinder",
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.5.0-alpha1"
authors = [
  "Jonas Blenninger <jonas.blenninger@aqarios.com>",
  "David Bucher <david.bucher@aqarios.com>",
]
edition = "2024"
description = "Aqarios LunaModel: Symbolic modeling for optimization"
homepage = "https://www.aqarios.com"
repository = "https://github.com/aqaiors/luna-model"

[workspace.dependencies]
global_counter = "0.2.2"
hashbrown = "0.16.0"
nohash = "0.2.0"
num = "0.4.3"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.2"
rustc-hash = "2.1.1"
prost = "0.14.1"
strum = "0.27.2"
strum_macros = "0.27.2"
zstd = "0.13.3"
either = "1.15.0"
regex = "1.12.2"
time = { version = "0.3.44", features = ["formatting"] }
itertools = "0.14.0"
indexmap = "2.12.0"
dyn-clone = "1.0.19"
pad = "0.1.6"
sqids = "0.4.2"
bitvec = "1.0.1"
enumset = "1.1.10"
pyo3 = { version = "0.27.1", features = ["extension-module", "generate-import-lib"] }
numpy = "0.27.0"
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
derive_more = "2.0.1"
parking_lot = "0.12.5"

# TODO: BEFORE RELEASE ADD THE `version = "0.5.0" filed here again and fix the version on top.
# So we can have individual versions for each crate if desired.
lunamodel = { path = "crates/lunamodel", default-features = false }
lunamodel-types = { path = "crates/types", default-features = false }
lunamodel-error = { path = "crates/error", default-features = false }
lunamodel-core = { path = "crates/core", default-features = false }
lunamodel-ops = { path = "crates/ops", default-features = false }
lunamodel-io = { path = "crates/io", default-features = false }
lunamodel-hashing = { path = "crates/hashing", default-features = false }
lunamodel-serializer = { path = "crates/serializer", default-features = false }
lunamodel-transform = { path = "crates/transform", default-features = false }
lunamodel-translate = { path = "crates/translate", default-features = false }
lunamodel-python = { path = "crates/python", default-features = false }
lunamodel-utils = { path = "crates/utils", default-features = false }
lunamodel-unwind = { path = "crates/unwind", default-features = false }

lunamodel-unwindable = { path = "crates/unwind/unwindable", default-features = false }
lunamodel-unwinder = { path = "crates/unwind/unwinder", default-features = false }
