[workspace]
resolver = "3"
members = [
  "crates/*",
  "py-lunamodel/pylm",
  "pyo3-lunamodel",
  "crates/unwind/unwindable",
  "crates/unwind/unwinder",
  "crates/transpiler/transpiler_macros",
  "crates/python/python_macros",
  "js-lunamodel"
]
default-members = [
  "crates/*",
]

[workspace.package]
version = "0.6.4-rc.1"
# Cargo has no maintainers field; Aqarios GmbH as steward is expressed via
# the crates.io crate owners (and homepage/repository) instead.
authors = [
  "Jonas Blenninger <jonas.blenninger@aqarios.com>",
  "David Bucher <david.bucher@aqarios.com>",
  "Maximilian Janetschek <maximilian.janetschek@aqarios.com>",
]
edition = "2024"
description = "LunaModel: A Symbolic Modeling Library for Optimization."
homepage = "https://docs.aqarios.com/luna-model/intro"
repository = "https://github.com/aqarios/luna-model"
license = "Apache-2.0"

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
debug = false
incremental = false

[workspace.dependencies]
global_counter = "0.2.2"
nohash = "0.2.0"
num = "0.4.3"
num-traits = "0.2.19"
once_cell = "1.21.4"
rand = "0.10.1"
rustc-hash = "2.1.2"
prost = "0.14.3"
strum = "0.28.0"
strum_macros = "0.28.0"
zstd = "0.13.3"
either = "1.15.0"
regex = "1.12.3"
time = { version = "0.3.47", features = ["formatting"] }
itertools = "0.14.0"
indexmap = "2.14.0"
dyn-clone = "1.0.20"
pad = "0.1.6"
sqids = "0.4.2"
bitvec = "1.0.1"
enumset = "1.1.10"
pyo3 = { version = "0.27.2", features = ["generate-import-lib"] }
numpy = "0.27.1"
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
derive_more = "2.1.1"
parking_lot = "0.12.5"
napi = "3.0.0"
napi-derive = "3.0.0"
napi-build = "2.2.3"

luna-model = { path = "crates/lunamodel", version = "0.6.4-rc.1", default-features = false }
lunamodel-types = { path = "crates/types", version = "0.6.4-rc.1", default-features = false }
lunamodel-error = { path = "crates/error", version = "0.6.4-rc.1", default-features = false }
lunamodel-core = { path = "crates/core", version = "0.6.4-rc.1", default-features = false }
lunamodel-io = { path = "crates/io", version = "0.6.4-rc.1", default-features = false }
lunamodel-hashing = { path = "crates/hashing", version = "0.6.4-rc.1", default-features = false }
lunamodel-serializer = { path = "crates/serializer", version = "0.6.4-rc.1", default-features = false }
lunamodel-transform = { path = "crates/transform", version = "0.6.4-rc.1", default-features = false }
lunamodel-transpiler = { path = "crates/transpiler", version = "0.6.4-rc.1", default-features = false }
lunamodel-translate = { path = "crates/translate", version = "0.6.4-rc.1", default-features = false }
lunamodel-python = { path = "crates/python", version = "0.6.4-rc.1", default-features = false }
lunamodel-utils = { path = "crates/utils", version = "0.6.4-rc.1", default-features = false }
lunamodel-unwind = { path = "crates/unwind", version = "0.6.4-rc.1", default-features = false }

lunamodel-unwindable = { path = "crates/unwind/unwindable", version = "0.6.4-rc.1", default-features = false }
lunamodel-unwinder = { path = "crates/unwind/unwinder", version = "0.6.4-rc.1", default-features = false }

lunamodel-transpiler-macros = { path = "crates/transpiler/transpiler_macros", version = "0.6.4-rc.1", default-features = false }
lunamodel-python-macros = { path = "crates/python/python_macros", version = "0.6.4-rc.1", default-features = false }
