[project]
name = "aqmodels"
dynamic = ["version", "description", "readme"]
authors = [
    { name = "Jonas Blenninger", email = "jonas.blenninger@aqarios.com" },
    { name = "David Bucher", email = "david.bucher@aqarios.com" },
    { name = "Benjamin Suehling", email = "benjamin.suehling@aqarios.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.0.0",
]

[tool.uv]
package = true
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
    { file = "src/aqmodels/**/*.pyi" },
    { file = "src/aqmodels/**/*.py" },
]

[tool.pytest.ini_options]
markers = [
    "variable",
    "expression",
    "expression_substitution",
    "model",
    "model_substitution",
    "constraint",
    "str_repr",
    "translator",
    "imports",
    "solution",
    "solution_translation",
]

[tool.maturin]
module-name = "aqmodels._core"
python-packages = ["aqmodels"]
python-source = "src"
features = ["py", "pyt"]
include = [
    "src/aqmodels/**/*.pyi",
    "src/aqmodels/**/*.py",
    "src/aqmodels/py.typed",
]
compatibility = "linux"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "memray>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "memory-profiler>=0.61.0",
    "dimod>=0.12.18",
    "ipython>=9.0.2",
    "pytest-cov>=6.1.1",
    "gurobipy>=12.0.1",
    "cplex>=22.1.2.0; sys_platform == 'linux'",
    "qiskit[all]>=1.1.0,<2.0.0",
    "dwave-hybrid>=0.6.13",
    "scipy>=1.15.1",
    "qiskit-optimization>=0.6.1",
    "qiskit-ibm-runtime>=0.38.0",
    "qiskit-aer>=0.17.0",
    "pyscipopt>=5.4.1",
    "mypy>=1.15.0",
    "ty>=0.0.1a5",
    "isort>=6.0.1",
]
