[project]
name = "luna_model"
dynamic = ["version", "description", "readme"]
authors = [
    { name = "Jonas Blenninger", email = "jonas.blenninger@aqarios.com" },
    { name = "David Bucher", email = "david.bucher@aqarios.com" },
    { name = "Benjamin Suehling", email = "benjamin.suehling@aqarios.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.0.0",
]

[tool.uv]
package = true
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
    { file = "src/luna_model/**/*.pyi" },
    { file = "src/luna_model/**/*.py" },
]

[tool.pytest.ini_options]
markers = [
    "variable",
    "expression",
    "expression_substitution",
    "model",
    "model_substitution",
    "constraint",
    "str_repr",
    "translator",
    "imports",
    "solution",
    "solution_translation",
]
testpaths = ["pytests"]

[tool.maturin]
module-name = "luna_model._core"
python-packages = ["luna_model"]
python-source = "src"
features = ["pyt"]
include = [
    "src/luna_model/**/*.pyi",
    "src/luna_model/**/*.py",
    "src/luna_model/py.typed",
]
compatibility = "linux"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "scipy>=1.16.1",
    "scippy>=0.1.31",
    "docplex>=2.30.251",
    "dimod>=0.12.21",
    "rich>=14.1.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    # dependencies that only works for < 3.13 python versions.
    "cplex>=22.1.2.0; sys_platform == 'linux' and python_version < '3.13'",
    # dependencies that only works for < 3.14 python versions.
    "gurobipy>=12.0.1; python_version < '3.14'",
    "pyscipopt>=5.6.0; python_version < '3.14'",
    "dwave-hybrid>=0.6.14; python_version < '3.14'",
    "qiskit[all]>=2.1.2; python_version < '3.14'",
    "qiskit-aer>=0.17.1; python_version < '3.14'",
    "qiskit-ibm-runtime>=0.41.1; python_version < '3.14'",
    "qiskit-optimization>=0.6.1; python_version < '3.14'",
]
