[package]
name = "js-lunamodel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "JavaScript and TypeScript bindings for LunaModel"
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-serializer = { workspace = true }
napi = { workspace = true, features = ["chrono_date"] }
napi-derive = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[[example]]
name = "solution_fixture"
path = "examples/solution_fixture.rs"
