[package]
name = "js-lunamodel"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description = "JavaScript and TypeScript bindings for LunaModel"
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lunamodel = { workspace = true, features = ["serializer"] }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[[example]]
name = "solution_fixture"
path = "examples/solution_fixture.rs"
