[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "luna_model"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version", "description"]
authors = [
    { name = "Aqarios GmbH", email = "pypi@aqarios.com" },
]
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.txt"]
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy>=2.4.6",
    "typing-extensions>=4.15.0; python_version < '3.13'",
]
keywords = [
  "aqarios",
  "luna",
  "quantum computing",
  "quantum optimization",
  "optimization",
  "modeling"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dimod = [
    "dimod>=0.12.21",
]
qiskit = [
    "qiskit-optimization>=0.6.1",
    "qiskit>=2.1.2",
]
scip = [
    "pyscipopt>=6.2.1",
]

[project.urls]
Homepage = "https://aqarios.com"
Documentation = "https://docs.aqarios.com"

[tool.maturin]
strip = true
manifest-path = "pylm/Cargo.toml"
module-name = "luna_model._lm"
python-packages = ["luna_model"]
python-source = "src"
all-features = false
no-default-features = true
include = [
    "src/luna_model/**/*.pyi",
    "src/luna_model/**/*.py",
    "src/luna_model/py.typed",
]
exclude = [
    "**/__pycache__",
     "**/*.pyc",
]

[tool.uv]
package = true
cache-keys = [
    { file = "pylm/Cargo.toml" },
    { file = "pylm/Cargo.lock" },
    { file = "src/**/*.rs" },
    { file = "../crates/**/*.rs" },
]

[dependency-groups]
dev = [
    "dimod>=0.12.21",
    "docplex>=2.30.251",
    "ipython>=9.14.0",
    "numpy>=2.4.6",
    "pre-commit>=4.5.0",
    "pyscipopt>=6.2.1",
    "pytest>=9.0.2",
    "qiskit>=2.1.2",
    "qiskit-ibm-runtime>=0.47.0",
    "qiskit-optimization>=0.6.1",
    "scipy>=1.16.3",
    "rich>=14.2.0",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "gurobipy>=13.0.0; python_version < '3.14'",
    "qiskit-aer>=0.17.1; python_version < '3.14'",
    "auditwheel>=6.7.0",
    "gurobipy>=13.0.2",
    "jupyter>=1.1.1",
    "pytest-xdist>=3.8.0",
]
docs = [
    "zensical>=0.0.43",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocstrings[python]>=1.0.4",
]
build = [
  "maturin[zig]>=1.13.3"
]

[tool.mypy]
exclude = [".venv", "tests", "docs", "examples"]
disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = [
    "luna_model._lm",
    "luna_model._lm.*",
]
ignore_missing_imports = true
