[package]
name = "pyo3-lunamodel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-python = { workspace = true }
