[package]
name = "pyo3-lunamodel"
version = "0.5.0-alpha.4"
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true }
parking_lot = { workspace = true }
derive_more = { workspace = true }

lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-python = { workspace = true }
lunamodel-translate = { workspace = true }
