[package]
name = "pyo3-lunamodel"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true }
parking_lot = { workspace = true }
derive_more = { workspace = true }

luna-model = { workspace = true, features = ["python", "translate", "transpiler"] }
