[package]
name = "lunamodel-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-types = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-utils = { workspace = true }

hashbrown = { workspace = true }
global_counter = { workspace = true }
bitvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
itertools = { workspace = true }
enumset = { workspace = true }
num = { workspace = true }
sqids = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[features]
py = ["pyo3"]
