[package]
name = "lunamodel-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[features]
py = ["pyo3"]
