[package]
name = "lunamodel-error"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[features]
py = ["pyo3"]
