[package]
name = "lunamodel-hashing"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }

prost = { workspace = true }
itertools = { workspace = true }
