[package]
name = "lunamodel-io"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-transpiler = { workspace = true }
lunamodel-transform = { workspace = true }

indexmap = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
time = { workspace = true }

[dependencies.pyo3]
workspace = true
optional = true

[features]
py = ["pyo3"]
