[package]
name = "lunamodel-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-types = { workspace = true }
lunamodel-error = { workspace = true }
hashbrown = { workspace = true }
global_counter = { workspace = true }
