[package]
name = "lunamodel-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }

pyo3 = { workspace = true, features = ["multiple-pymethods"] }
parking_lot = { workspace = true, features = ["arc_lock"] }
