[package]
name = "lunamodel-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
enumset = { workspace = true }
strum_macros = { workspace = true }
