[package]
name = "lunamodel-unwind"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
once_cell = { workspace = true }
pyo3 = { workspace = true }
