[package]
name = "lunamodel"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-core = { workspace = true }
lunamodel-error = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-utils = { workspace = true }

[dependencies.lunamodel-hashing]
workspace = true
optional = true

[dependencies.lunamodel-io]
workspace = true
optional = true

[dependencies.lunamodel-python]
workspace = true
optional = true

[dependencies.lunamodel-serializer]
workspace = true
optional = true

[dependencies.lunamodel-transformv2]
workspace = true
optional = true

[dependencies.lunamodel-transpiler]
workspace = true
optional = true

[dependencies.lunamodel-translate]
workspace = true
optional = true

[dependencies.lunamodel-unwind]
workspace = true
optional = true

[features]
hashing = ["lunamodel-hashing"]
io = ["lunamodel-io"]
python = ["lunamodel-python"]
serializer = ["lunamodel-serializer"]
transformv2 = ["lunamodel-transformv2"]
transpiler = ["lunamodel-transpiler"]
translate = ["lunamodel-translate"]
unwind = ["lunamodel-unwind"]

py-io = ["io", "lunamodel-io/py"]
py-transform = ["transformv2"]
py-types = ["lunamodel-types/py"]
py-error = ["lunamodel-error/py"]

full = [
  "hashing",
  "io",
  "python",
  "serializer",
  "transformv2",
  "transpiler",
  "translate",
  "unwind",
  "py-io",
  "py-transform",
  "py-types",
  "py-error"
]
