[package]
name = "lunamodel-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-serializer = { workspace = true }
lunamodel-core = { workspace = true, features = ["py"] }
lunamodel-error = { workspace = true, features = ["py"] }
lunamodel-types = { workspace = true, features = ["py"] }
lunamodel-translate = { workspace = true, features = ["py"] }

pyo3 = { workspace = true, features = ["multiple-pymethods"] }
parking_lot = { workspace = true, features = ["arc_lock"] }
hashbrown = { workspace = true }
