[package]
name = "lunamodel-python"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
lunamodel-serializer = { workspace = true }
lunamodel-core = { workspace = true, features = ["py"] }
lunamodel-error = { workspace = true, features = ["py"] }
lunamodel-types = { workspace = true, features = ["py"] }
lunamodel-io = { workspace = true, features = ["py"] }
lunamodel-translate = { workspace = true }
lunamodel-utils = { workspace = true }
lunamodel-hashing = { workspace = true }
lunamodel-unwind = { workspace = true }

lunamodel-transform = { workspace = true }
lunamodel-transpiler = { workspace = true }
lunamodel-python-macros = { workspace = true }

pyo3 = { workspace = true, features = ["multiple-pymethods", "indexmap"] }
numpy = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
derive_more = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
strum_macros = { workspace = true }
