[package]
name = "lunamodel-serializer"
version.workspace = true
license.workspace = true
publish = false
authors.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true }
zstd = { workspace = true }
bitvec = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

lunamodel-error = { workspace = true }
lunamodel-core = { workspace = true }
lunamodel-types = { workspace = true }
lunamodel-transpiler = { workspace = true }
